# AI-TTS

./: .env.example  README.md  pyproject.toml
ara_tts/: __init__.py  alert_cache.py  audio_player.py  cli.py  pipeline.py  server.py  tts_engine.py
cortana_tts/: __init__.py  alert_cache.py  cli.py  pipeline.py  piper_engine.py  server.py  tts_engine.py
integrations/claude/: notify.ps1  notify.sh  status.ps1  status.sh
integrations/copilot/: watcher.py  wrapper.ps1  wrapper.sh
integrations/opencode/: index.ts
