[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ara-tts"
version = "0.1.0"
description = "Local Kokoro TTS server with hooks for Claude Code, OpenCode, and GitHub Copilot CLI"
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { text = "MIT" }
keywords = ["tts", "text-to-speech", "kokoro", "claude", "ai", "voice"]
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.34.0",
  "kokoro>=0.9.4",
  "soundfile>=0.13.0",
  "sounddevice>=0.5.0",
  "numpy>=1.26.0",
  "python-dotenv>=1.0.0",
  "pythainlp>=5.0.0",
  "click>=8.0.0",
  "requests>=2.32.0",
]

[project.scripts]
ara-tts = "ara_tts.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "httpx>=0.27.0"]

[tool.hatch.build.targets.wheel]
packages = ["ara_tts"]
artifacts = ["integrations/**"]

[tool.hatch.build]
include = [
  "ara_tts/**",
  "integrations/**",
  "README.md",
  ".env.example",
]

[tool.pytest.ini_options]
pythonpath = ["."]
markers = ["integration: end-to-end tests requiring model and audio device"]
